# MERuntime

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
runtime/: CMakeLists.txt
runtime/include/MERuntime/: MERuntime.h
runtime/include/MERuntime/fs/: FileSystem.h
runtime/include/MERuntime/imgui/: Renderer.h  Shaders.h
runtime/include/MERuntime/render/: BufferedWindow.h  RenderGlobals.h
runtime/shaders/: CompileImGuiShaders.sh  ImGuiPixel.hlsl  ImGuiVertex.hlsl
runtime/src/: MERuntime.cpp
runtime/src/fs/: FileSystem.cpp
runtime/src/imgui/: Renderer.cpp
runtime/src/render/: BufferedWindow.cpp  RenderGlobals.cpp
